clusters/homelab/apps/monitoring/monitoring-configs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: monitoring
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
  hostnames:
    - minio.michaelhomelab.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-console
          port: 9001



---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s3
  namespace: monitoring
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
  hostnames:
    - minio-api.michaelhomelab.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9000



---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir-querier-route
  namespace: monitoring
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
  hostnames:
    - mimir.michaelhomelab.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Scope-OrgID
                value: anonymous
      backendRefs:
        - name: mimir-querier
          port: 8080


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway

  hostnames:
    - grafana.michaelhomelab.work

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring

spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway

  hostnames:
    - prometheus.michaelhomelab.work

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: prometheus-scraper-server
          port: 80
